[dependencies]
anyhow = {default-features = false, features = ["std"], version = "=1.0.86"}
gtk = {default-features = false, version = "=0.18.1"}
gtk-layer-shell = {default-features = false, version = "=0.8.1"}
nameof = {default-features = false, version = "=1.2.2"}
serde_json = {default-features = false, features = [
  "std"
], version = "=1.0.128"}
tracing = {default-features = false, version = "=0.1.40"}
tracing-subscriber = {default-features = false, features = [
  "ansi",
  "env-filter",
  "fmt",
  "smallvec",
  "std",
  "tracing-log"
], version = "=0.3.18"}

[package]
edition = "2021"
license = "MIT"
name = "vosd"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
strip = true
